Text no longer overflows on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,7 @@ body {
   background-size: 100% 100%;
   background-attachment: fixed;
   background-repeat: repeat;
+  overflow-wrap: break-word;
 }
 h1 {
   font-family: 'cyberspaceregular', 'unispacebold', 'Unispace';
